[package]
name = "stress-test"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "stress-test"
path = "src/main.rs"

[dependencies]
log = "0"
env_logger = "0"
anyhow = "1"
consensus = { package = "leto", path = "../consensus" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
base64 = "0"
fnv = "1"
tempfile = "3"
rand = "0.8"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.mempool]
package = "libmempool-rs"
git = "https://github.com/libdist-rs/libmempool-rs.git"

[dependencies.crypto]
package = "libcrypto"
git = "https://github.com/libdist-rs/libcrypto-rs.git"

[dependencies.net-common]
package = "common"
git = "https://github.com/libdist-rs/libnet-rs.git"

[features]
default = []
benchmark = ["consensus/benchmark"]
